# ldk-node-desktop

./: .gitignore  README.md  package.json
ldk-node/: Cargo.toml  Package.swift
ldk-node/bindings/: ldk_node.udl
ldk-node/bindings/kotlin/ldk-node-android/: gradle.properties
ldk-node/bindings/kotlin/ldk-node-jvm/: gradle.properties
ldk-node/bindings/python/: pyproject.toml
ldk-node/bindings/swift/: Package.swift
ldk-node/src/: builder.rs  event.rs  lib.rs  types.rs  wallet.rs
ldk-node/src/payment/: bolt11.rs  bolt12.rs  payment_store.rs  spontaneous.rs
ldk-node/tests/: integration_tests_rust.rs
ldk-node/tests/common/: mod.rs
src/: App.tsx  AppBar.tsx  ChannelData.tsx  Dialog.tsx  NodeContext.tsx  NodeData.tsx  PeerNodeData.tsx  PeersTable.tsx  Snackbar.tsx  main.tsx  styles.css  types.ts  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/proto/: walletrpc.proto
src-tauri/src/: account.rs  bitcoin.rs  lightning.rs  main.rs  paths.rs  rpc_client.rs  wallet.rs
src/ChannelsSection/: ChannelsTable.tsx  index.tsx
src/DialogViews/: ConnectToPeer.tsx  CreateInvoice.tsx  OpenChannel.tsx  PayInvoice.tsx
src/LogsSections/: LogsDialog.tsx  LogsTable.tsx  index.tsx
src/OurNodeSection/: OurNodeActions.tsx  OurNodeData.tsx  OurNodeStats.tsx  index.tsx
src/OurNodeSection/Actions/: ConnectToPeer.tsx  CreateInvoice.tsx  OpenChannel.tsx  PayInvoice.tsx  StartNode.tsx  index.ts
src/PaymentsSection/: PaymentsTable.tsx  index.tsx
src/PeersSection/: PeersTable.tsx  index.tsx
src/actions/: CloseChannel.tsx  ConnectToPeer.tsx  CreateAccount.tsx  CreateInvoice.tsx  OpenChannel.tsx  OpenLSPChannel.tsx  PayInvoice.tsx  PayOffer.tsx  index.ts
src/common/: AppBar.tsx  Button.tsx  Dialog.tsx  DropdownButton.tsx  MenuButton.tsx  SelectInput.tsx  SideBar.tsx  Snackbar.tsx  TitleCard.tsx  carousle.tsx  index.ts
src/pages/: index.ts
src/pages/bitcoin/: CreateWallet.tsx  ReceiveDialog.tsx  StartNodeDialog.tsx  StopNodeDialog.tsx  WalletView.tsx  index.tsx
src/pages/dashboard/: index.tsx
src/pages/home/: CreateWalletDialog.tsx  ReceiveDialog.tsx  StopNodeDialog.tsx  UpdateConfigDialog.tsx  WalletView.tsx  index.tsx
src/pages/ldk/: index.tsx
src/pages/ldk/ChannelsSection/: ChannelsTable.tsx
src/pages/ldk/LogsSections/: LogsDialog.tsx
src/pages/ldk/OurNodeSection/: OurNodeActions.tsx  OurNodeData.tsx  OurNodeStats.tsx  index.tsx
src/pages/ldk/OurNodeSection/Actions/: CloseChannel.tsx  ConnectToPeer.tsx  CreateInvoice.tsx  OpenChannel.tsx  PayInvoice.tsx  StartNode.tsx
src/pages/ldk/PaymentsSection/: PaymentsTable.tsx
src/pages/ldk/PeersSection/: PeersTable.tsx
src/state/: BitcoinContext.tsx  NodeContext.tsx  RouterContext.tsx
