[package]
name = "ldk-desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "clipboard-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ldk-node = { version = "0.2.0" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
bdk = { version = "0.29.0", features = ["std", "sqlite-bundled", "keys-bip39", "bitcoincore-rpc", "electrum", "rpc"] }
bip39 = { version = "2.0.0", features = ["rand"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
