[package]
name = "ldk-desktop"
version = "0.0.0"
description = "Bitcoin + Lightning wallet for desktop"
authors = ["jbesraa"]
license = ""
repository = ""
edition = "2021"

[[bin]] 
name = "walletrpc-client"
path = "src/rpc_client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }
tonic-build = "0.10"

[dependencies]
tauri = { version = "1.4", features = [ "clipboard-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ldk-node = { path = "../../ldk-node" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
bip39 = { version = "2.0.0", features = ["rand"] }
home-dir = "0.1.0"
directories = "5.0.1"
tokio = "1.35.1"
anyhow = "1.0.79"
tonic = "0.10"
prost = "0.12"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
