[package]
name = "ldk-desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "clipboard-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ldk-node = {path= "../../tnull/ldk-node"}
# ldk-node = { git = "https://github.com/tnull/ldk-node", branch = "2024-01-0.3-pre-alpha" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
# bdk = { version = "0.29.0", features = ["std", "sqlite-bundled", "keys-bip39", "bitcoincore-rpc", "rpc"] }
bip39 = { version = "2.0.0", features = ["rand"] }
home-dir = "0.1.0"
directories = "5.0.1"
tokio = "1.35.1"
anyhow = "1.0.79"
lazy_static = "1.4.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.8"
actix = "0.13.3"
actix-web = "4.5.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
